<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">



        <item
            android:id="@+id/menu_icon"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>

        <item
            android:id="@+id/search_btn"
            android:title="@string/search"
            android:icon="@drawable/search_btn"/>

        <item
            android:id="@+id/categories_icon"
            android:title="@string/category"
            android:icon="@drawable/category_btn"/>

        <item
            android:id="@+id/add_btn"
            android:title="@string/add"
            android:icon="@drawable/add"/>



    </group>

    <item android:title="Profile">

        <menu>

            <group android:checkableBehavior="single">



                <item
                    android:id="@+id/login_icon"
                    android:title="@string/login"
                    android:icon="@drawable/login_btn"/>

                <item
                    android:id="@+id/profile_icon"
                    android:title="@string/profile"
                    android:icon="@drawable/profile_btn"/>

                <item
                    android:id="@+id/logout_icon"
                    android:title="@string/logout"
                    android:icon="@drawable/logout_btn"/>


            </group>


        </menu>




    </item>

    <item android:title="Categories">

        <menu>

            <group android:checkableBehavior="single">



                <item
                    android:id="@+id/Rest_icon"
                    android:title="@string/restaurant"
                    android:icon="@drawable/res_btn"/>

                <item
                    android:id="@+id/bank_"
                    android:title="@string/bank"
                    android:icon="@drawable/bank_btn"/>

                <item
                    android:id="@+id/education_icon"
                    android:title="@string/education"
                    android:icon="@drawable/ic_school"/>


                <item
                    android:id="@+id/shops_icon"
                    android:title="@string/shops"
                    android:icon="@drawable/ic_supermarket"/>


            </group>


        </menu>




    </item>

    <item android:title="Feedback">

        <menu>

            <group android:checkableBehavior="none">



                <item
                    android:id="@+id/share_icon"
                    android:title="@string/share"
                    android:icon="@drawable/ic_share"/>

                <item
                    android:id="@+id/rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/rate_btn"/>


            </group>


        </menu>




    </item>





</menu>