<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Common.LogInSignUp.VerifyOTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_cross" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/code_verification"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="100sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/otp_verification"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="24sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/otp_description"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <com.chaos.view.PinView
            android:id="@+id/pin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/colorAccent"
            android:background="@color/lightWhite"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemRadius="10dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:background="@color/black"
            android:elevation="10dp"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/verify_code"
            android:onClick="user_profile_screen"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:iconSize="200dp"
           />

    </LinearLayout>


</ScrollView>