<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="animation_sign_up"
    tools:context=".Common.LogInSignUp.SignUp2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:id="@+id/signup_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_arrow"
            android:transitionName="animation_back_btn" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/text_view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/bungee"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:transitionName="animation_text_singnup" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_gender"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <RadioGroup
                android:id="@+id/radio_grp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other" />

            </RadioGroup>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black" />


            <TextView android:id="@+id/text_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_your_age"
                android:textColor="@color/black"
                android:textSize="18dp" />


            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/black"
            android:elevation="10dp"
            android:gravity="center"
            android:onClick="call3rd_sign_up_screen"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:transitionName="animation_next_btn"
            app:iconSize="200dp" />

        <Button
            android:id="@+id/login_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:text="@string/login_btn"

            android:textColor="#000"
            android:transitionName="login_signUp_trans" />


    </LinearLayout>

</ScrollView>